[project]
name = "image-upscaler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "basicsr>=1.4.2",
    "gradio>=6.11.0",
    "numpy<2",
    "pillow>=12.2.0",
    "realesrgan>=0.3.0",
    "torch==2.1.2",
    "torchvision==0.16.2",
]